2001-03-13  Ramiro Estrugo  <ramiro@eazel.com>

	* backends/xml-entry.c:
	* gconf/gconftool.c:
	Add inclusion of <gnome-xml/xmlmemory.h> to fix the fact that
	'xmlFree' is undefined.  This was caused by the last free
	vs. xmlFree change.
	
2001-03-13  Kjartan Maraas  <kmaraas@gnome.org>

	* backends/xml-entry.c: Fix to use xmlFree() instead of free().
	* gconf/gconftool.c: Same here.
	
2001-03-12  Timur Bakeyev  <timur@gnu.org>

	* Makefile.am: Made warning printing a bit nicer.
	
2001-03-11  Havoc Pennington  <hp@redhat.com>

	* configure.in: 1.0.0, woo-hoo!

2001-03-06  Havoc Pennington  <hp@redhat.com>

	* configure.in: bump version to 0.51
	
	* gconf/gconfd.c (gconf_main): change the periodic timeout to 15
	minutes, to be a bit more aggressive about cleanup.
	(open_append_handle): add a timeout to close the 
	saved_state filehandle after a short time, to avoid keeping
	descriptors open.
	(gconfd_need_log_cleanup): new internal function used to control 
	whether the periodic cleanup function needs to save a log file
	
2001-02-27  Havoc Pennington  <hp@redhat.com>

	* gconf.spec.in: %define prefix %{_prefix} instead of @prefix@

2001-02-27  Havoc Pennington  <hp@redhat.com>

	* configure.in: bump version to 0.50

	* gconf/gconfd.c (main): Close stdin/stdout/stderr. Also, set the
	log handler, so we don't need stdout/stderr to see GLib messages,
	they go to syslog.

	* configure.in: Turn off debugging by default

	* gconf/Makefile.am (INCLUDES): set the log domain

	* gconf/gconftool.c (recurse_subdir_list): the list contains full
	directory paths to start with, fix from Colm

	* gconf/gconfd.c (register_database): bugfix from Colm

	* gconf/gconf.c (lookup_engine): fix from Colm to check that we
	have an engines hash
	(gconf_engine_get_for_address): improve warning message, fix from
	Colm
	(gconf_engine_remove_dir): new function from Colm, this was
	implemented on the server side but somehow never exported.
