@@ -20,3 +20,5 @@ config.h.in
 gconf-config
 gconf.spec
 gconf.m4
+gconf.pc
+gconfgtk.pc
