@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+
+Name: gconf
+Description: GNOME Config System.
+Version: @VERSION@
+Requires: oaf
+Libs: -L${libdir} -lgconf-@MAJOR_VERSION@
+Cflags: -I${includedir}/gconf/@MAJOR_VERSION@
