@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+
+Name: gconfgtk
+Description: GTK+ bindings for GConf
+Version: @VERSION@
+Requires: gconf
+Libs: -lgconf-gtk-@MAJOR_VERSION@
+Cflags:
